# duckdb-altertable

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  extension_config.cmake  vcpkg.json
.cursor/rules/: global.mdc
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml
docs/: README.md
scripts/: run-clang-tidy.py  test_with_mock.sh
src/: CMakeLists.txt  altertable_connection.cpp  altertable_execute.cpp  altertable_extension.cpp  altertable_optimizer.cpp  altertable_physical.cpp  altertable_query.cpp  altertable_scanner.cpp  altertable_storage.cpp  altertable_utils.cpp
src/include/: altertable_connection.hpp  altertable_conversion.hpp  altertable_extension.hpp  altertable_optimizer.hpp  altertable_physical.hpp  altertable_result.hpp  altertable_result_reader.hpp  altertable_scanner.hpp  altertable_storage.hpp  altertable_utils.hpp  altertable_version.hpp
src/include/storage/: altertable_catalog.hpp  altertable_catalog_set.hpp  altertable_connection_pool.hpp  altertable_index_set.hpp  altertable_schema_entry.hpp  altertable_schema_set.hpp  altertable_table_entry.hpp  altertable_table_set.hpp  altertable_transaction.hpp  altertable_transaction_manager.hpp
src/storage/: CMakeLists.txt  altertable_catalog.cpp  altertable_catalog_set.cpp  altertable_connection_pool.cpp  altertable_index_set.cpp  altertable_schema_entry.cpp  altertable_schema_set.cpp  altertable_table_entry.cpp  altertable_table_set.cpp  altertable_transaction.cpp  altertable_transaction_manager.cpp
test/sql/: arrow_types.test  attach_error_handling.test  attach_options_errors.test  attach_simple.test  attached_writes.test  basic_scan.test  checkpoint_remote.test  connection_cache_option.test  connection_string.test  connection_validation.test  count_star_pushdown.test  debug_extension_option.test  decimal_types.test  direct_access_aggregation.test  direct_access_join.test  direct_access_multicolumn.test  direct_access_null.test  dsn_case_insensitive.test  duckdb_native_types.test  execute_errors.test  execute_function.test  explicit_duckdb_transaction.test  extension_load.test  filter_pushdown_projection.test  function_signature.test  query_dsn_only.test  query_function.test  query_pushdown.test  read_only_attach.test  regress_decimal_catalog.test  regress_double_precision.test  regress_secret_quoting.test  scan_table_success.test  secret_handling.test  show_tables_attached.test
